[tool.poetry]
name = "coding-problems"
version = "0.1.0"
description = ""
authors = ["Sohaib Errabii <errabii.sohaib@gmail.com>"]

[tool.poetry.dependencies]
python = "^2.7"

[tool.poetry.dev-dependencies]
pytest = "4.6.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
